--- a/cancer-case-study/style.css
+++ b/cancer-case-study/style.css
@@ -39,14 +39,14 @@ section{
 }
 
 .question{
-  background-color: #ccc;
+  background-color: #eee4e8;
   font-weight: bolder;
   margin-top: 10px;
   border: #000 solid 2px;
 }
 
 .answer {
-  background-color: #ccc;
+  background-color: #eee4e8;
   margin-top: 5px;
   border: #000 solid 2px;
 }
@@ -65,7 +65,7 @@ p{
 
 
 #item-00{
-  background-color: #ccc;
+  background-color: #eee4e8;
   border: #000 solid 2px;
   grid-area: 1 / 2 / 1 / 6;
   text-align: center;
@@ -92,7 +92,7 @@ p{
 }
 
 #item-06 {
-  background-color: #ccc;
+  background-color: #eee4e8;
   margin-top: 5px;
   border: #000 solid 2px;
   grid-area: 12 / 1 / 13 / 7;
