--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ footer > ul {
   margin-top: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr 1.5fr 1.5fr 1.5fr 7.4fr;
+  grid-template-columns: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr 5fr;
   text-align: center;
 }
 
