--- a/css/about-me.css
+++ b/css/about-me.css
@@ -6,5 +6,33 @@ h2{
 }
 
 article{
+  max-width: 1160px;
+  padding-top: 10px;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  grid-template-areas:
+    "who who where"
+    "what-do what-like what-will";
+}
 
+#who{
+  grid-area: who;
+}
+
+#where{
+  grid-area: where;
+}
+
+#what-do{
+  grid-area: what-do;
+}
+
+#what-like{
+  grid-area: what-like;
+}
+
+#what-will{
+  grid-area: what-will;
 }
