--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 
 #wrapper{
-  max-width: 960px;
-  height: 100%;
   position: relative;
-  max-width: 90%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -18,11 +16,9 @@ body{
 }
 
 header{
-  z-index: +1;
   color: #fff;
   padding-bottom: 0.5em;
   position: relative;
-  top: 0;
 }
 
 main {
@@ -189,6 +185,7 @@ footer ul {
                       /*FOOTER STYLE ENDS HERE*/
                       /* HOME STYLE STARTS HERE  */
 #home main{
+  z-index: -1;
   width: 81%;
   position: relative;
   top: -10px;
@@ -204,7 +201,7 @@ footer ul {
 
 #home main img{
   grid-area: photo-of-me;
-  margin-top: 105px;
+  margin-top: 50%;
   z-index: 0;
   position: relative;
   padding-bottom: 0;
@@ -334,6 +331,7 @@ svg{
   max-width: 35%;
   max-height: 35%;
 }
+
 #fa-spotify{
   color: rgb(101,210,110);
 }
@@ -371,6 +369,10 @@ svg{
     "edu skills"
     "exp skills";
   padding-bottom: 100px;
+}
+
+#resume section article p{
+  line-height: 22px;
 }
 
 #education{
